-set navbar to fixed top -set scrollbar width

--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,14 @@
 
 
 ::-webkit-scrollbar{
-  width: 0px;
+  width: 4px;
 }
 ::-webkit-scrollbar-track{
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb{
   background-color: #212529;
+  border-radius: 50rem;
 }
 
 .scrollableDiv{
